# content-moderation-service

./: .env.example  ARCHITECTURE.md  Dockerfile.api  Dockerfile.processor  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
docker/: init.sql
docs/: API_DOCS.md  openapi.yaml
src/: __init__.py
src/api/: __init__.py  main.py  message_queue.py  rate_limiter.py  repositories.py  schemas.py
src/api/routers/: content.py
src/common/: __init__.py  config.py  database.py  models.py
src/processor/: __init__.py  consumer.py  main.py  moderation.py
tests/: __init__.py  conftest.py
tests/integration/: test_api_flow.py
tests/unit/: test_moderation.py  test_rate_limiter.py  test_repositories.py
